installing and configuring MongoBd database